[package]
name = "hussh"
version = "0.1.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hussh"
crate-type = ["cdylib"]

[dependencies]
async-ssh2-tokio = "0.8.14"
openssl = { version = "0.10.72", features = ["vendored"] }
pyo3 = { version = "0.20.3", features = ["extension-module", "abi3-py38", "chrono"] }
pyo3-asyncio = { version = "0.20.0", features = ["attributes", "tokio-runtime"] }
shellexpand = "3.1.1"
ssh2 = "0.9"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread", "fs", "io-util"] }
libc = "0.2.152"
tempfile = "3.10.0"
base64 = "0.21.7" # Added base64 for file encoding/decoding
futures = "0.3" # Added futures for Future and StreamExt traits

[profile.release]
lto = true

