[package]
name = "hussh"
version = "0.2.1"
edition = "2021"

[lib]
name = "hussh"
crate-type = ["cdylib"]

[features]
default = ["async"]
async = []

[dependencies]
ssh2 = "0.9.5"
openssl = { version = "0.10", features = ["vendored"] }
pyo3 = { version = "0.26.0", features = ["generate-import-lib"] }
shellexpand = "3.1.0"
pyo3-async-runtimes = { version = "0.27.0", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["full"] }
russh = { version = "0.56", default-features = false, features = ["flate2", "async-trait", "ring", "rsa"] }
russh-sftp = "2.1"
async-trait = "0.1"

[profile.release]
lto = true
