[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "hussh"
description = "SSH for Humans"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["ssh", "ssh2", "rust", "pyo3"]
authors = [
    {name = "Jacob J Callahan", email = "jacob.callahan05@gmail.com"}
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Shells",
    "Topic :: System :: Networking",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "docker",
    "maturin",
    "patchelf; sys_platform == 'linux'",
    "pexpect",
    "pre-commit",
    "pytest",
    "pytest-randomly",
    "ruff",
]

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "-l", "--color=yes", "--code-highlight=yes"]

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
fixable = ["ALL"]
select = [
    "B",  # bugbear
    "C90", # mccabe
    "E",  # pycodestyle
    "F",  # flake8
    "G", # flake8-logging-format
    "I", # isort
    "PERF", # Perflint rules
    "PLC", # pylint
    "PLE", # pylint
    "PLR", # pylint
    "PLW", # pylint
    "PTH", # Use pathlib
    "PT",  # flake8-pytest
    "RET",  # flake8-return
    "RUF", # Ruff-specific rules
    "SIM",  # flake8-simplify
    "UP",  # pyupgrade
    "W",  # pycodestyle
]
ignore = [
    "B019",  # lru_cache can lead to memory leaks - acceptable tradeoff
    "PT004", # pytest underscrore prefix for non-return fixtures
    "PT005", # pytest no underscrore prefix for return fixtures
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = [
    "hussh",
]
combine-as-imports = true

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.mccabe]
max-complexity = 20
